# pg-analytics-mcp

./: .gitignore  README.md  pyproject.toml
pg_analytics_mcp/: __init__.py  __main__.py  db.py  server.py
